# jyputer-notebook-mcp-cli

./: .gitignore  README.md  pyproject.toml
.claude/hooks/: no-push-main.py  ruff-format.py
src/jl/: __main__.py  cli.py  config.py  http_client.py  kernel.py  notebook.py  output.py  state.py  tunnel.py
tests/: test_happy_path.py
